--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = 6ed2a16
-	trimbase = 
+	base = d15b85f
+	trimbase = 6ed2a16
 	parent = upstream
 	previous = 2c37ea7
