--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 462671f
-	trimbase = 
+	base = 1c47691
+	trimbase = 462671f
 	parent = upstream
 	previous = 2c37ea7
