--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = a2a5de7
-	trimbase = 
+	base = 34c55ba
+	trimbase = a2a5de7
 	parent = upstream
 	previous = 2c37ea7
