--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = d720de3
-	trimbase = 
+	base = 0166caf
+	trimbase = d720de3
 	parent = upstream
 	previous = 2c37ea7
