--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8dc4d6a
+	base = bc838f4
 	trimbase = 
 	parent = rpm/indigo/rocon_apps
-	previous = 
+	previous = 8dc4d6a
