--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a19a21
+	base = 43f1844
 	trimbase = 
 	parent = rpm/indigo/rocon_app_platform
-	previous = 
+	previous = 3a19a21
