--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b042afe
+	base = dcda1f8
 	trimbase = 
 	parent = rpm/indigo/rocon_app_utilities
-	previous = 
+	previous = b042afe
