--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = b9d1133
-	trimbase = 
+	base = 5428626
+	trimbase = b9d1133
 	parent = upstream
 	previous = 93c3496
