--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = a0d6b24
-	trimbase = 
+	base = 099db05
+	trimbase = a0d6b24
 	parent = upstream
 	previous = 93c3496
