--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 16f49a8
-	trimbase = 
+	base = cad7dc6
+	trimbase = 16f49a8
 	parent = upstream
 	previous = 93c3496
