--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = 6626c88
-	trimbase = 
+	base = 6af8cba
+	trimbase = 6626c88
 	parent = upstream
 	previous = 93c3496
