--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.7.3-0": ["Fri Nov 21 2014", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.7.2-0": ["Mon Aug 25 2014", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.7.4-0": ["Tue Dec 30 2014", "Jihoon Lee", "jihoonlee.in@gmail.com"]}
+{"0.7.3-0": ["Fri Nov 21 2014", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.7.5-0": ["Thu Jan 08 2015", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.7.2-0": ["Mon Aug 25 2014", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.7.4-0": ["Tue Dec 30 2014", "Jihoon Lee", "jihoonlee.in@gmail.com"]}
