--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = d7bb5a6
-	trimbase = 
+	base = 97d8002
+	trimbase = d7bb5a6
 	parent = upstream
 	previous = 46b63f2
