--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 0a0d70c
-	trimbase = 
+	base = 7c65e91
+	trimbase = 0a0d70c
 	parent = upstream
 	previous = 46b63f2
