--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = a784c99
-	trimbase = 
+	base = 6448c48
+	trimbase = a784c99
 	parent = upstream
 	previous = 46b63f2
