--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = a58483e
-	trimbase = 
+	base = c1b49f1
+	trimbase = a58483e
 	parent = upstream
 	previous = 46b63f2
