--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.7.5-0": ["Thu Jan 08 2015", "Daniel Stonier", "d.stonier@gmail.com"], "0.7.4-0": ["Tue Dec 30 2014", "Daniel Stonier", "d.stonier@gmail.com"]}
+{"0.7.6-0": ["Mon Jan 12 2015", "Daniel Stonier", "d.stonier@gmail.com"], "0.7.5-0": ["Thu Jan 08 2015", "Daniel Stonier", "d.stonier@gmail.com"], "0.7.4-0": ["Tue Dec 30 2014", "Daniel Stonier", "d.stonier@gmail.com"]}
