--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = 6403a70
-	trimbase = 
+	base = da60137
+	trimbase = 6403a70
 	parent = upstream
 	previous = 7601657
