--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 4d1225b
-	trimbase = 
+	base = 81722b3
+	trimbase = 4d1225b
 	parent = upstream
 	previous = 7601657
