--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 6eb1931
-	trimbase = 
+	base = 482d017
+	trimbase = 6eb1931
 	parent = upstream
 	previous = 7601657
