--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = bd53c93
-	trimbase = 
+	base = c355f28
+	trimbase = bd53c93
 	parent = upstream
 	previous = 7601657
