--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = 981bc24
-	trimbase = 
+	base = 231d174
+	trimbase = 981bc24
 	parent = upstream
 	previous = 5432224
