--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 2811085
-	trimbase = 
+	base = f7ea714
+	trimbase = 2811085
 	parent = upstream
 	previous = 5432224
