--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = f272c60
-	trimbase = 
+	base = 01bd6b7
+	trimbase = f272c60
 	parent = upstream
 	previous = 5432224
