--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = 759a441
-	trimbase = 
+	base = ab51ce4
+	trimbase = 759a441
 	parent = upstream
 	previous = 5432224
