--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = 83c5d72
-	trimbase = 
+	base = f4e844b
+	trimbase = 83c5d72
 	parent = upstream
 	previous = d737eaf
