--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 82ec0f3
-	trimbase = 
+	base = a9a84b7
+	trimbase = 82ec0f3
 	parent = upstream
 	previous = d737eaf
