--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = d73361d
-	trimbase = 
+	base = ef1aee8
+	trimbase = d73361d
 	parent = upstream
 	previous = d737eaf
