--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = 8932b78
-	trimbase = 
+	base = 8659e54
+	trimbase = 8932b78
 	parent = upstream
 	previous = d737eaf
