--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>rocon_app_platform</name>
-  <version>0.7.8</version>
+  <version>0.7.9</version>
   <description>
     Robot application platform for ros robots with a default implementation in python.
   </description>
@@ -18,6 +18,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>rocon_app_manager</run_depend>
   <run_depend>rocon_apps</run_depend>
+  <run_depend>rocon_app_utilities</run_depend>
   
   <export>
     <metapackage/>
