--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = e244f2a
-	trimbase = 
+	base = 2b0c6b0
+	trimbase = e244f2a
 	parent = upstream
 	previous = ed387a7
