--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 4eb2e54
-	trimbase = 
+	base = b0a437b
+	trimbase = 4eb2e54
 	parent = upstream
 	previous = ed387a7
