--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = e04340c
-	trimbase = 
+	base = 21fd277
+	trimbase = e04340c
 	parent = upstream
 	previous = ed387a7
