--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = 56ded1d
-	trimbase = 
+	base = 86374f4
+	trimbase = 56ded1d
 	parent = upstream
 	previous = ed387a7
