--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = e4ecff4
-	trimbase = 
+	base = 4444571
+	trimbase = e4ecff4
 	parent = upstream
 	previous = 1a425da
