--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 4af3ca7
-	trimbase = 
+	base = 4a556ba
+	trimbase = 4af3ca7
 	parent = upstream
 	previous = 1a425da
