--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 9148f5a
-	trimbase = 
+	base = c37be16
+	trimbase = 9148f5a
 	parent = upstream
 	previous = 1a425da
