--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = a5b17d0
-	trimbase = 
+	base = f578947
+	trimbase = a5b17d0
 	parent = upstream
 	previous = b8670f0
