--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 0355343
-	trimbase = 
+	base = 6ba7027
+	trimbase = 0355343
 	parent = upstream
 	previous = b8670f0
