--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 8fee5ea
-	trimbase = 
+	base = c92a277
+	trimbase = 8fee5ea
 	parent = upstream
 	previous = b8670f0
