--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = d49fc17
-	trimbase = 
+	base = deb1f89
+	trimbase = d49fc17
 	parent = upstream
 	previous = b8670f0
