--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 92e7b6e
-	trimbase = 
+	base = 99692e2
+	trimbase = 92e7b6e
 	parent = upstream
 	previous = d3eb6ca
