--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 32f8df5
-	trimbase = 
+	base = 446432d
+	trimbase = 32f8df5
 	parent = upstream
 	previous = d3eb6ca
