--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = 9db4328
-	trimbase = 
+	base = 3154fd0
+	trimbase = 9db4328
 	parent = upstream
 	previous = d3eb6ca
