--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>rocon_app_utilities</name>
-  <version>0.7.12</version>
+  <version>0.7.13</version>
   <description>The rocon_app_utilities package</description>
 
   <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
@@ -16,6 +16,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>python-catkin-pkg</build_depend>
   <build_depend>roslint</build_depend>
+  <run_depend>rocon_console</run_depend>
   <run_depend>rocon_python_utils</run_depend>
   <run_depend>rocon_uri</run_depend>
   <run_depend>python-rospkg</run_depend>
