--- a/rocon_app_manager/package.xml
+++ b/rocon_app_manager/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>rocon_app_manager</name>
-  <version>0.7.13</version>
+  <version>0.8.0</version>
   <description>
     The public interface and retaskable interface for a robot.
   </description>
@@ -17,10 +17,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>python-catkin-pkg</build_depend>
   <build_depend>roslint</build_depend>
+  <build_depend>rostest</build_depend>
 
   <run_depend>capabilities</run_depend>
   <run_depend>gateway_msgs</run_depend>
-  <run_depend>python-rospkg</run_depend>
   <run_depend>rocon_app_manager_msgs</run_depend>
   <run_depend>rocon_app_utilities</run_depend>
   <run_depend>rocon_apps</run_depend>
