--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c33d5b2
-	trimbase = 
+	trim = rocon_apps
+	base = ef2060d
+	trimbase = c33d5b2
 	parent = upstream
 	previous = 854a327
