--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f21be20
-	trimbase = 
+	trim = rocon_app_platform
+	base = dde9efb
+	trimbase = f21be20
 	parent = upstream
 	previous = 854a327
