--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 859caf9
-	trimbase = 
+	trim = rocon_app_manager
+	base = 524a5be
+	trimbase = 859caf9
 	parent = upstream
 	previous = 854a327
