--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8db14b9
-	trimbase = 
+	trim = rocon_app_utilities
+	base = b11b546
+	trimbase = 8db14b9
 	parent = upstream
 	previous = 854a327
