--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 524a5be
+	base = bea1618
 	trimbase = 
 	parent = release/kinetic/rocon_app_manager
-	previous = 
+	previous = 524a5be
