--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 136554a
+	base = edc8ed5
 	trimbase = 
 	parent = debian/kinetic/rocon_app_manager
-	previous = 
+	previous = 136554a
