--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef2060d
+	base = 5ba0da1
 	trimbase = 
 	parent = release/kinetic/rocon_apps
-	previous = 
+	previous = ef2060d
