--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9bb1fa9
+	base = a45c12d
 	trimbase = 
 	parent = debian/kinetic/rocon_apps
-	previous = 
+	previous = 9bb1fa9
