--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b11b546
+	base = 4460371
 	trimbase = 
 	parent = release/kinetic/rocon_app_utilities
-	previous = 
+	previous = b11b546
