--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 59f8aa1
+	base = 28f0c35
 	trimbase = 
 	parent = debian/kinetic/rocon_app_utilities
-	previous = 
+	previous = 59f8aa1
