--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dde9efb
+	base = 30b495b
 	trimbase = 
 	parent = release/kinetic/rocon_app_platform
-	previous = 
+	previous = dde9efb
