--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 977caba
+	base = d6749a5
 	trimbase = 
 	parent = debian/kinetic/rocon_app_platform
-	previous = 
+	previous = 977caba
