--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 179b0c0
+	base = ea72699
 	trimbase = 
 	parent = debian/kinetic/rocon_app_manager
-	previous = 
+	previous = 179b0c0
