--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 85b98b1
+	base = 462fea9
 	trimbase = 
 	parent = debian/kinetic/rocon_apps
-	previous = 
+	previous = 85b98b1
