--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2b16cbc
+	base = b226d97
 	trimbase = 
 	parent = debian/kinetic/rocon_app_utilities
-	previous = 
+	previous = 2b16cbc
