--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1320697
+	base = 3799cca
 	trimbase = 
 	parent = debian/kinetic/rocon_app_platform
-	previous = 
+	previous = 1320697
