--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 09b9dbd
+	base = f6abd45
 	trimbase = 
 	parent = rpm/kinetic/rocon_app_manager
-	previous = 
+	previous = 09b9dbd
