--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8c93b0d
+	base = 1e06a86
 	trimbase = 
 	parent = rpm/kinetic/rocon_apps
-	previous = 
+	previous = 8c93b0d
