--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5800d22
+	base = d3d5386
 	trimbase = 
 	parent = rpm/kinetic/rocon_app_utilities
-	previous = 
+	previous = 5800d22
