--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dde9efb
+	base = 4f0c7f7
 	trimbase = 
 	parent = release/kinetic/rocon_app_platform
-	previous = 
+	previous = dde9efb
