--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8f7f7d5
+	base = 7cd73ad
 	trimbase = 
 	parent = rpm/kinetic/rocon_app_platform
-	previous = 
+	previous = 8f7f7d5
