--- a/rocon_app_manager/CMakeLists.txt
+++ b/rocon_app_manager/CMakeLists.txt
@@ -10,9 +10,6 @@ project(rocon_app_manager)
 ##############################################################################
 
 find_package(catkin REQUIRED COMPONENTS roslint)
-if (CATKIN_ENABLE_TESTING)
-  find_package(catkin REQUIRED COMPONENTS rostest)
-endif()
 catkin_package()
 
 catkin_python_setup()
@@ -23,8 +20,7 @@ catkin_python_setup()
 
 install(
     PROGRAMS 
-        scripts/concert_client.py
-        scripts/standalone.py
+        scripts/rapp_manager.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
     )
 
@@ -36,12 +32,3 @@ install(DIRECTORY param
 
 install(DIRECTORY icons
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-
-  
-##############################################################################
-# Unit Tests
-##############################################################################
-
-if (CATKIN_ENABLE_TESTING)
-  add_subdirectory(tests)
-endif()
