--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = 94d0b7b
-	trimbase = 
+	base = 134b460
+	trimbase = 94d0b7b
 	parent = upstream
 	previous = 764507d
