--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 71371d1
-	trimbase = 
+	base = 35b4f84
+	trimbase = 71371d1
 	parent = upstream
 	previous = 764507d
