--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 8e6aeec
-	trimbase = 
+	base = eee8ac7
+	trimbase = 8e6aeec
 	parent = upstream
 	previous = 764507d
