--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = cab9cbb
-	trimbase = 
+	base = 66e8f20
+	trimbase = cab9cbb
 	parent = upstream
 	previous = 764507d
