--- a/tracks.yaml
+++ b/tracks.yaml
@@ -75,7 +75,7 @@ tracks:
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: kinetic
+    devel_branch: release/0.9-indigo-kinetic-gopher
     last_version: 0.8.0
     name: rocon_app_platform
     patches: null
