--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = 56d4d49
-	trimbase = 
+	base = 2e7fe54
+	trimbase = 56d4d49
 	parent = upstream
 	previous = 5336f84
