--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = 9afcc88
-	trimbase = 
+	base = 2a6e35f
+	trimbase = 9afcc88
 	parent = upstream
 	previous = 5336f84
