--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 007f20a
-	trimbase = 
+	base = cd29196
+	trimbase = 007f20a
 	parent = upstream
 	previous = 5336f84
