--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = 347c6ab
-	trimbase = 
+	base = 42081d0
+	trimbase = 347c6ab
 	parent = upstream
 	previous = 5336f84
