--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.8.0-0": ["Tue Jun 21 2016", "Daniel Stonier", "d.stonier@gmail.com"]}
+{"0.8.0-0": ["Tue Jun 21 2016", "Daniel Stonier", "d.stonier@gmail.com"], "0.9.1-0": ["Sun Oct 16 2016", "Daniel Stonier", "d.stonier@gmail.com"]}
