--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_apps
-	base = 752f1a9
-	trimbase = 
+	base = da898e9
+	trimbase = 752f1a9
 	parent = upstream
 	previous = 5336f84
