--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_utilities
-	base = 682ea86
-	trimbase = 
+	base = b908da4
+	trimbase = 682ea86
 	parent = upstream
 	previous = 5336f84
