--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_manager
-	base = 20c5d86
-	trimbase = 
+	base = 68149d5
+	trimbase = 20c5d86
 	parent = upstream
 	previous = 5336f84
