--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_app_platform
-	base = b508dcf
-	trimbase = 
+	base = ab3691d
+	trimbase = b508dcf
 	parent = upstream
 	previous = 5336f84
