--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 68149d5
+	base = 2a59c13
 	trimbase = 
 	parent = release/kinetic/rocon_app_manager
-	previous = 
+	previous = 68149d5
