--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bc7bfff
+	base = 2bd1944
 	trimbase = 
 	parent = arch/kinetic/rocon_app_manager
-	previous = 
+	previous = bc7bfff
