--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da898e9
+	base = a83dbd1
 	trimbase = 
 	parent = release/kinetic/rocon_apps
-	previous = 
+	previous = da898e9
