--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 25af138
+	base = 963fa67
 	trimbase = 
 	parent = arch/kinetic/rocon_apps
-	previous = 
+	previous = 25af138
