--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b908da4
+	base = ed616c6
 	trimbase = 
 	parent = release/kinetic/rocon_app_utilities
-	previous = 
+	previous = b908da4
