--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ef0bb2
+	base = 3de87ff
 	trimbase = 
 	parent = arch/kinetic/rocon_app_utilities
-	previous = 
+	previous = 9ef0bb2
