--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ab3691d
+	base = 0bb00b0
 	trimbase = 
 	parent = release/kinetic/rocon_app_platform
-	previous = 
+	previous = ab3691d
