--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8af2655
+	base = 6e9d91c
 	trimbase = 
 	parent = arch/kinetic/rocon_app_platform
-	previous = 
+	previous = 8af2655
